--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,15 +2,15 @@ name: Claro Monitor
 
 on:
   schedule:
-      - cron: '0 */3 * * 1-5'   # minuto 0, cada 3 h, lunes-viernes
+    - cron: '0 */3 * * 1-5'   # minuto 0, cada 3 h, lunes-viernes
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4  ›
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v4       # ✅ sin >
+      - uses: actions/setup-python@v5   # ✅ sin >
         with:
           python-version: '3.12'
       - run: |
